# godir

./: Cargo.toml  README.md  release.sh
.github/workflows/: release.yml
src/: main.rs
