[package]
name = "godir"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Justiniano <cjus@ieee.org>"]
description = "A fuzzydirectory navigation tool"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
