[package]
name = "godir"
version = "0.1.2"
edition = "2021"
authors = ["Carlos Justiniano <cjus@ieee.org>"]
description = "A fuzzy directory navigation tool"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
